# pyMOFL

./: .gitignore  CLAUDE.md  CODING_GUIDELINES.md  README.md  ROADMAP.md  pyproject.toml  setup.py
data/lj_minima/: LJ6_Oh.xyz
docs/: CEC2005_Tech-Report.md  SPSO_Functions.md
examples/: basic_usage.py  config_driven_example.py  plot_lennard_jones.py  plot_network.py  plot_step_2d.py  plot_tripod.py
scripts/: generate_coverage.sh
src/pyMOFL/: __init__.py  base.py  registry.py
src/pyMOFL/cli/: __init__.py  main.py  suite.py
src/pyMOFL/composites/: __init__.py  composite.py  hybrid.py
src/pyMOFL/compositions/: __init__.py  hybrid_function.py  min_composition.py  weighted_composition.py
src/pyMOFL/core/: __init__.py  bound_mode_enum.py  bounds.py  bounds_optimum_transform.py  composable_function.py  constrained_function.py  function.py  linear_constraint.py  quantization_type_enum.py  quantized_function.py
src/pyMOFL/decorators/: __init__.py  biased.py  boundary_adjusted_shift.py  matrix_transform.py  max_absolute.py  noise.py  quantized.py  rotated.py  scaled.py  shift_then_rotate.py  shifted.py
src/pyMOFL/factories/: __init__.py  bbob_constrained_suite_factory.py  bbob_largescale_suite_factory.py  bbob_mixint_suite_factory.py  bbob_noisy_suite_factory.py  bbob_suite_factory.py  benchmark_factory.py  composition_builder.py  config_parser.py  data_loader.py  function_factory.py  transform_builder.py
src/pyMOFL/functions/: __init__.py
src/pyMOFL/utils/: __init__.py  bbob_constraint_generator.py  bbob_instance.py  cec_data.py  rotation.py  suite_config.py
tests/: __init__.py  conftest.py  test_base.py
tests/benchmark_suites/: __init__.py  test_cec2005_validation.py  test_cec2013_validation.py  test_cec2014_suite_integration.py  test_cec2014_validation.py  test_cec2015_validation.py  test_cec2017_validation.py  test_cec2020_validation.py  test_cec2021_validation.py  test_cec2022_validation.py
tests/cli/: test_cec_data.py
tests/composites/: test_composite.py  test_hybrid.py
tests/compositions/: test_composite.py  test_hybrid.py  test_weighted_composition.py
tests/core/: test_bound_mode_enum.py  test_bounds.py  test_composed_function.py  test_constrained_function.py  test_function.py  test_linear_constraint.py  test_quantization_type_enum.py  test_quantized_function.py
tests/decorators/: test_biased.py  test_biased_function.py  test_boundary_adjusted_shift.py  test_matrix_transform.py  test_noise.py  test_quantized_function.py  test_rotated.py  test_rotated_function.py  test_scaled.py  test_shifted.py  test_shifted_function.py
tests/factories/: test_bbob_constrained_suite_factory.py  test_bbob_largescale_suite_factory.py  test_bbob_mixint_suite_factory.py  test_bbob_noisy_suite_factory.py  test_bbob_suite_factory.py  test_bbob_transforms_integration.py  test_cec_builder.py  test_config_parser.py  test_indexed_transforms_integration.py  test_new_function_factory.py  test_schema_validation.py  test_transform_builder.py  test_transformation_order.py
tests/functions/: __init__.py
tests/functions/bbob/: test_bbob_coco_validation.py  test_bbob_suite.py  test_bbob_suite_metadata.py
tests/functions/benchmark/: __init__.py  test_ackley.py  test_ackley_variants.py  test_alpine.py  test_attractive_sector.py  test_bent_cigar.py  test_branin.py  test_buche_rastrigin.py  test_classic_2d.py  test_classical_fixed.py  test_discus.py  (+49 more)
tests/test_composites/: test_composite.py
tests/tests_functions/: test_multimodal.py  test_unimodal.py
tests/utils/: __init__.py  benchmark_validation.py  exact_transforms.py  golden_loader.py  test_bbob_constraint_generator.py  test_bbob_instance.py  test_bbob_instance_largescale.py  test_benchmark_validation.py  test_golden_loader.py  test_rotation.py  test_suite_config.py  test_transform_validation.py  tolerance.py  transform_validation.py  validation.py
(+933 files in other folders)
